idoc.h

// This is the main structure you work with
typedef struct Idoc Idoc;
// You start by parsing the file using idoc_init
Idoc *idoc_init(const char *file_name);
    Idoc *idoc = idoc_init("filename");
    if (idoc == NULL) exit(1); // or do whatever you want here
// Finally, after getting all you want from the file, you can use idoc_free to
// free the whole object. Don't forget that idoc_get_cstr doesnt get freed here!!
void idoc_free(Idoc *idoc);
// These next functions do essentially the same thing, except instead of
// variatics, they take an array and its size. These are mainly for ffi or
// more niche uses. You should probably stick to the ones above (specifically the macros)


bool idoc_get_bool_arr(Idoc *idoc, bool def_bool, const char **path, size_t path_size);
int idoc_get_int_arr(Idoc *idoc, int def_int, const char **path, size_t path_size);
double idoc_get_double_arr(Idoc *idoc, double def_double, const char **path, size_t path_size);
char *idoc_get_cstr_arr(Idoc *idoc, const char *def_str, const char **path, size_t path_size);
bool idoc_get_tuple_bool_arr(Idoc *idoc, bool *out, size_t out_size, const char **path, size_t path_size);
bool idoc_get_tuple_int_arr    (Idoc *idoc, int *out, size_t out_size, const char **path, size_t path_size);
bool idoc_get_tuple_double_arr (Idoc *idoc, double *out, size_t out_size, const char **path, size_t path_size);
bool idoc_get_tuple_cstr_arr   (Idoc *idoc, char **out, size_t out_size, const char **path, size_t path_size);
typedef struct {
    char *items;
    size_t count;
    size_t capacity;
} Idoc_SB;
typedef struct {
    size_t count;
    const char *data;
} Idoc_SV;
typedef enum {
    VALUE_EMPTY,
    VALUE_STRING,
    VALUE_INTEGER,
    VALUE_FLOAT,
    VALUE_TUPLE,
    VALUE_BOOL,
    VALUE_REFERENCE,
} Idoc_Value_Type;
typedef struct Idoc_Value Idoc_Value;
struct Idoc_Value {
    Idoc_Value_Type type;
    union {
        Idoc_SV string;
        int integer;
        double floating;
        bool boolean;
        struct {
            Idoc_SV *items;
            size_t count;
            size_t capacity;
        } ref;
        struct {
            Idoc_Value *items;
            size_t count;
            size_t capacity;
        } tuple;
    };
};
typedef struct Idoc_Node {
    Idoc_SV key;
    Idoc_Value value;
    Idoc_Loc loc;

    struct Idoc_Node *items; // children
    size_t count;
    size_t capacity;
} Idoc_Node;
typedef struct {
    Lexer lexer;
    Idoc_Token current;
} Idoc_Parser;
struct Idoc {
    Idoc_Node root;
    Idoc_SB __file_content;
};
Idoc *idoc_init(const char *file_name) {
    Idoc *idoc = malloc(sizeof(*idoc));
    if (idoc == NULL) return NULL;
    Idoc_SB sb = {0};
    if (!idoc_read_entire_file(file_name, &sb)) {
        free(sb.items);
        free(idoc);
        return NULL;
    }
    Idoc_SV sv = {
        .data = sb.items,
        .count = sb.count
    };
    Idoc_Parser p = parser_init(sv, file_name);
    Idoc_Node n = parse_block(&p, 0);
    idoc->root = n;
    idoc->__file_content = sb;
    return idoc;
}
bool idoc_get_bool_arr(Idoc *idoc, bool def_bool, const char **path,
                     size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);
    char *def_bool_str = def_bool ? "true" : "false";
    if (current == NULL) {
        IDOC_WARN("Using default (%s)\n", def_bool_str);
        return def_bool;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\nUsing default (%s)\n", def_bool_str); // TODO: add line num logic to this
        return def_bool;
    } else if (value->type != VALUE_BOOL) {
        IDOC_WARN("Warning: Invalid type\nUsing default (%s)\n", def_bool_str); // TODO: add line num logic to this
        return def_bool;
    }
    return value->boolean;
}
int idoc_get_int_arr(Idoc *idoc, int def_int, const char **path,
                     size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);
    if (current == NULL) {
        IDOC_WARN("Using default (%d)\n", def_int);
        return def_int;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\nUsing default (%d)\n", def_int); // TODO: add line num logic to this
        return def_int;
    } else if (value->type != VALUE_INTEGER) {
        IDOC_WARN("Warning: Invalid type\nUsing default (%d)\n", def_int); // TODO: add line num logic to this
        return def_int;
    }
    return value->integer;
}
double idoc_get_double_arr(Idoc *idoc, double def_double, const char **path,
                           size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);
    if (current == NULL) {
        IDOC_WARN("Using default (%f)\n", def_double);
        return def_double;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\nUsing default (%f)\n", def_double); // TODO: add line num logic to this
        return def_double;
    }
    if (value->type == VALUE_FLOAT) {
        return value->floating;
    } else if (value->type == VALUE_INTEGER) {
        return (double)value->integer;
    }
    IDOC_WARN("Warning: Invalid type\nUsing default (%f)\n", def_double); // TODO: add line num logic to this
    return def_double;
}
char *idoc_get_cstr_arr(Idoc *idoc, const char *def_str, const char **path, size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);
    char *cp_def_str = cstr_copy(def_str);

    if (current == NULL) {
        IDOC_WARN("Using default (%s)\n", def_str);
        return cp_def_str;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\nUsing default (%s)\n", def_str); // TODO: add line num logic to this
        return cp_def_str;
    } else if (value->type != VALUE_STRING) {
        IDOC_WARN("Warning: Invalid type\nUsing default (%s)\n", def_str); // TODO: add line num logic to this
        return cp_def_str;
    }
    free(cp_def_str);
    return sv_to_cstr(value->string);
}
bool idoc_get_tuple_bool_arr(Idoc *idoc, bool *out, size_t out_size,
                            const char **path, size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);

    if (current == NULL) {
        return false;
    }


    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\n"); // TODO: add line num logic to this
        return false;
    } else if (value->type != VALUE_TUPLE) {
        IDOC_WARN("Warning: Invalid type\n"); // TODO: add line num logic to this
        return false;
    }

    if (value->tuple.count != out_size) {
        fprintf(stderr, "ERROR: Invalid array size. Expected `%zu` got `%zu`\n", value->tuple.count, out_size);
        return false;
    }

    for (size_t i = 0; i < value->tuple.count; i++) {
        if (value->tuple.items[i].type != VALUE_BOOL) {
            return false;
        }
        out[i] = value->tuple.items[i].boolean;
    }
    return true;
}
bool idoc_get_tuple_int_arr(Idoc *idoc, int *out, size_t out_size,
                            const char **path, size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);

    if (current == NULL) {
        return false;
    }


    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\n"); // TODO: add line num logic to this
        return false;
    } else if (value->type != VALUE_TUPLE) {
        IDOC_WARN("Warning: Invalid type\n"); // TODO: add line num logic to this
        return false;
    }

    if (value->tuple.count != out_size) {
        fprintf(stderr, "ERROR: Invalid array size. Expected `%zu` got `%zu`\n", value->tuple.count, out_size);
        return false;
    }

    for (size_t i = 0; i < value->tuple.count; i++) {
        if (value->tuple.items[i].type != VALUE_INTEGER) {
            return false;
        }
        out[i] = value->tuple.items[i].integer;
    }
    return true;
}
bool idoc_get_tuple_double_arr(Idoc *idoc, double *out, size_t out_size,
                               const char **path, size_t path_size) {

    Idoc_Node *current = idoc_find_path(idoc, path, path_size);

    if (current == NULL) {
        return false;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\n"); // TODO: add line num logic to this
        return false;
    } else if (value->type != VALUE_TUPLE) {
        IDOC_WARN("Warning: Invalid type\n"); // TODO: add line num logic to this
        return false;
    }

    if (value->tuple.count != out_size) {
        fprintf(stderr, "ERROR: Invalid array size. Expected `%zu` got `%zu`\n", value->tuple.count, out_size);
        return false;
    }

    for (size_t i = 0; i < value->tuple.count; i++) {
        if (value->tuple.items[i].type == VALUE_FLOAT) {
            out[i] = value->tuple.items[i].floating;
        } else if (value->tuple.items[i].type == VALUE_INTEGER) {
            out[i] = (double)value->tuple.items[i].integer;
        } else return false;
    }
    return true;
}
bool idoc_get_tuple_cstr_arr(Idoc *idoc, char **out, size_t out_size,
                             const char **path, size_t path_size) {
    Idoc_Node *current = idoc_find_path(idoc, path, path_size);

    if (current == NULL) {
        return false;
    }

    Idoc_Value *value = idoc_resolve_value(idoc, &current->value);
    if (value == NULL) {
        IDOC_WARN("Warning: Invalid reference\n"); // TODO: add line num logic to this
        return false;
    } else if (value->type != VALUE_TUPLE) {
        IDOC_WARN("Warning: Invalid type\n"); // TODO: add line num logic to this
        return false;
    }

    if (value->tuple.count != out_size) {
        fprintf(stderr, "ERROR: Invalid array size. Expected `%zu` got `%zu`\n", value->tuple.count, out_size);
        return false;
    }

    for (size_t i = 0; i < value->tuple.count; i++) {
        if (value->tuple.items[i].type != VALUE_STRING) {
            return false;
        }
        out[i] = sv_to_cstr(value->tuple.items[i].string);
    }
    return true;
}
void idoc_free(Idoc *idoc) {
    if (idoc == NULL) return;
    node_free(&idoc->root);
    free(idoc->__file_content.items);
    free(idoc);
}